# savile

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
_bmad-output/implementation-artifacts/tests/: test-summary.md
_bmad-output/review-artifacts/: mcp-adversarial-review.md
architecture/: index.html
docs/: architecture.md  epics.md  explanation.md  getting-started.md  index.md  prd.md  project-analysis.md
docs/v1.5.0/: architecture.md  epics.md  market-research.md
explanation/: index.html
frameworks/: analyst.md  architect.md  branding.md  cis.md  dev.md  pm.md  po.md  qa.md  ux.md
getting-started/: index.html
personas/: analyst.md  architect.md  branding.md  cis.md  dev.md  pm.md  po.md  qa.md  tech-writer.md  ux.md
project-analysis/: index.html
scripts/: run-mcp.sh  setup-bmad.sh  sync_bmad_to_vault.py
search/: search_index.json
src/savile/: __init__.py  cli.py
src/savile/core/: __init__.py  protocol.py  registry.py
src/savile/evals/: __init__.py  crucible.py
src/savile/mcp/: __init__.py  server.py
src/savile/sync/: __init__.py  manager.py
tests/: mock_eval.yaml  test_crucible.py  test_mcp.py  test_mcp_adversarial.py  test_mcp_sse.py  test_registry.py  test_sync.py
tests/e2e/: test_cli_e2e.py
